--- a/labs/lab06_networks.ipynb
+++ b/labs/lab06_networks.ipynb
@@ -285,22 +285,24 @@
         "  mean = np.nanmean(pathlenlist)\n",
         "  return mean\n",
         "\n",
-        "print(avgshortestpathlen(G, '10'))"
+        "allnodeavgs = [avgshortestpathlen(G, node) for node in uniqueusers]\n",
+        "meanofall = np.nanmean(allnodeavgs)\n",
+        "print(meanofall)"
       ],
       "metadata": {
         "id": "mjUys_tj6xV2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0bb0f792-4d5b-450b-d190-65da39fb1dab"
+        "outputId": "4cbf02d8-270f-457e-a347-057ae801ed47"
       },
-      "execution_count": 17,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3.8266897746967072\n"
+            "3.691592636562027\n"
           ]
         }
       ]
@@ -311,10 +313,22 @@
         "print(nx.average_shortest_path_length(G, 10))"
       ],
       "metadata": {
-        "id": "aG4wVctxdRdT"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aG4wVctxdRdT",
+        "outputId": "b4031f5e-5e86-45af-d0a1-2fdcbc7d22c7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.6925068496963913\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
