--- a/labs/lab06_networks.ipynb
+++ b/labs/lab06_networks.ipynb
@@ -393,7 +393,83 @@
     {
       "cell_type": "code",
       "source": [
-        "# Ex 4 code here"
+        "def flip(p):\n",
+        "  \"\"\"Return boolean\"\"\"\n",
+        "  return np.random.random() < p\n",
+        "\n",
+        "def rewire(G, p):\n",
+        "  \"\"\"\"\"\"\n",
+        "  nodes = set(G)\n",
+        "  for u, v in G.edges():\n",
+        "    if flip(p):\n",
+        "      choices = nodes - {u} - set(G[u])\n",
+        "      new_v = np.random.choice(list(choices))\n",
+        "      G.remove_edge(u, v)\n",
+        "      G.add_edge(u, new_v)\n",
+        "\n",
+        "def adjacent_edges(nodes, halfk):\n",
+        "  \"\"\"\"\"\"\n",
+        "  n = len(nodes)\n",
+        "  for i, u in enumerate(nodes):\n",
+        "    for j in range(i+1, i+halfk+1):\n",
+        "      v = nodes[j % n]\n",
+        "      yield u, v\n",
+        "\n",
+        "def make_ring_lattice(n, k):\n",
+        "  \"\"\"\"\"\"\n",
+        "  G = nx.Graph()\n",
+        "  nodes = range(n)\n",
+        "  G.add_nodes_from(nodes)\n",
+        "  G.add_edges_from(adjacent_edges(nodes, k//2))\n",
+        "  return G\n",
+        "\n",
+        "def path_lengths(G):\n",
+        "  \"\"\"takes a graph and returns a list of shortest path lengths, one for each pair of nodes.\"\"\"\n",
+        "  length_map = nx.shortest_path_length(G)\n",
+        "  lengths = [length_map[u][v] for u, v in all_pairs(G)]\n",
+        "  return lengths\n",
+        "\n",
+        "def characteristic_path_length(G):\n",
+        "  return np.mean(path_lengths(G))\n",
+        "\n",
+        "def make_ws_graph(n, k, p):\n",
+        "  \"\"\"Makes a Watts-Strogatz graph.\n",
+        "  n: number of nodes\n",
+        "  k: degree of each node\n",
+        "  p: probability of rewiring an edge\n",
+        "  \"\"\"\n",
+        "  ws = make_ring_lattice(n, k)\n",
+        "  rewire(ws, p)\n",
+        "  return ws\n",
+        "\n",
+        "def clustering_coefficient(G):\n",
+        "  \"\"\"Average of the local clustering coefficients.\n",
+        "  G: Graph\n",
+        "  returns: float\n",
+        "  \"\"\"\n",
+        "  cu = [node_clustering(G, node) for node in G]\n",
+        "  return np.nanmean(cu)\n",
+        "\n",
+        "def run_one_graph(n, k, p):\n",
+        "  ws = make_ws_graph(n, k, p)\n",
+        "  mpl = characteristic_path_length(ws)\n",
+        "  cc = clustering_coefficient(ws)\n",
+        "  return mpl, cc\n",
+        "\n",
+        "ps = np.logspace(-4, 0, 9)\n",
+        "\n",
+        "def run_experiment(ps, n=1000, k=10, iters=20):\n",
+        "  res = []\n",
+        "  for p in ps:\n",
+        "    t = [run_one_graph(n, k, p) for _ in range(iters)]\n",
+        "    means = np.array(t).mean(axis=0)\n",
+        "    res.append(means)\n",
+        "  return np.array(res)\n",
+        "\n",
+        "L, C = np.transpose(res)\n",
+        "\n",
+        "L /= L[0]\n",
+        "C /= C[0]"
       ],
       "metadata": {
         "id": "1lQ149MrVHhX"
