--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCGSMb+KmkqDHNBi2mb9qU",
+      "authorship_tag": "ABX9TyOMicTOzWPTeVS1nGw6aQgo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -109,8 +109,8 @@
         "\"\"\"\n",
         "libarything to goodreads:\n",
         "\n",
-        "  1. Click on entry from top left to right bottom\n",
-        "    1. grab goodread equivalent entry of librarything entry\n",
+        "  1. In librarything, click on entry from top left to right bottom\n",
+        "    1. in goodreads, find equivalent entry of librarything entry\n",
         "    2. grab data\n",
         "  2. click next\n",
         "  3. repeat until no entry to click on\n",
