--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMicTOzWPTeVS1nGw6aQgo",
+      "authorship_tag": "ABX9TyP4/qV8I2fQ7oj3jI+Uz+t6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -125,14 +125,19 @@
         "\n",
         "\n",
         "{\n",
-        "  'race': ('race', 'racial', 'racism', 'racist', 'ethnicity', 'ethnic')\n",
+        "  'race': ('race', 'racial', 'racism', 'racist', 'ethnicity', 'ethnic'),\n",
         "\n",
-        "  'psychology': ('psychology', 'psychologial', 'behavior')\n",
+        "  'psychology': ('psychology', 'psychological', 'behavior'),\n",
         "\n",
-        "  'popular culture'\n",
+        "  'media': ('media', 'film', 'movie', 'music', 'television', 'TV', 'video', 'platform'),\n",
         "\n",
-        "  ''\n",
+        "  'economics': ('economic', 'economy', 'finance', 'financial', 'money', 'trade', 'market', 'business', 'currency'),\n",
         "\n",
+        "  'gender': ('gender', 'masculine', 'male', 'man', 'boy', 'feminine', 'female', 'woman', 'girl', 'non-binary', 'nonbinary'),\n",
+        "\n",
+        "  'politics': ('politic', 'politics', 'political', 'policy', 'policies', 'ideology', 'ideological' 'inequality', 'equality', 'equity', 'equitable', 'minister', 'administration', 'administrative', 'leader', 'leadership', 'president', 'management', 'state', 'country', 'national', 'international', 'transnational', 'globalization', 'globalized', 'government', 'governance', 'poverty', 'impoverished', 'disadvantaged', 'oppression', 'oppressed', 'war', 'military', 'militant', 'surveillance', 'security', 'advocacy', 'protest', 'activism', 'activist'),\n",
+        "\n",
+        "  'history': ('history', 'historical', 'historic', 'ahistoric', 'century', 'archaeology', 'archaeological')\n",
         " }\n"
       ]
     }
