--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4/qV8I2fQ7oj3jI+Uz+t6",
+      "authorship_tag": "ABX9TyMlr1dwfigt2hZhsv3YP3Bw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -125,19 +125,19 @@
         "\n",
         "\n",
         "{\n",
-        "  'race': ('race', 'racial', 'racism', 'racist', 'ethnicity', 'ethnic'),\n",
+        "  'race & ethnicity': ('race', 'racial', 'racialized', 'racism', 'racist', 'ethnicity', 'ethnic', 'xenophobia', 'xenophobic', 'colonialism', 'colonialist', 'colonial', 'colonization', 'colonized', 'decolonized', 'decolonization', 'decolonial', 'subaltern'),\n",
         "\n",
-        "  'psychology': ('psychology', 'psychological', 'behavior'),\n",
+        "  'psychology': ('psychology', 'psychological', 'psychiatry', 'psychologist', 'psychiatrist', 'psychiatric', 'behavior', 'mental', 'mentally'),\n",
         "\n",
-        "  'media': ('media', 'film', 'movie', 'music', 'television', 'TV', 'video', 'platform'),\n",
+        "  'media': ('media', 'film', 'movie', 'music', 'radio', 'television', 'TV', 'video', 'platform', 'communication', 'literature', 'newspaper', 'internet'),\n",
         "\n",
-        "  'economics': ('economic', 'economy', 'finance', 'financial', 'money', 'trade', 'market', 'business', 'currency'),\n",
+        "  'economics': ('economic', 'economics', 'economy', 'socioeconomic', 'finance', 'financial', 'money', 'trade', 'market', 'business', 'currency', 'corporate', 'corporation', 'debt'),\n",
         "\n",
-        "  'gender': ('gender', 'masculine', 'male', 'man', 'boy', 'feminine', 'female', 'woman', 'girl', 'non-binary', 'nonbinary'),\n",
+        "  'gender & sexuality': ('gender', 'gendering', 'sexism', 'sexualization', 'sexuality', 'sex', 'heterosexuality', 'heterosexuality', 'misogyny', 'misogynistic', 'feminism', 'feminist', 'gendering', 'cisgender', 'masculine', 'male', 'man', 'boy', 'feminine', 'female', 'woman', 'girl', 'transgender', 'non-binary', 'nonbinary', 'queer', 'homosexual', 'homosexuality', 'gay', 'lesbian', 'bisexual', 'bisexuality', 'homophobia', 'homophobic', 'transphobia', 'transphobic'),\n",
         "\n",
-        "  'politics': ('politic', 'politics', 'political', 'policy', 'policies', 'ideology', 'ideological' 'inequality', 'equality', 'equity', 'equitable', 'minister', 'administration', 'administrative', 'leader', 'leadership', 'president', 'management', 'state', 'country', 'national', 'international', 'transnational', 'globalization', 'globalized', 'government', 'governance', 'poverty', 'impoverished', 'disadvantaged', 'oppression', 'oppressed', 'war', 'military', 'militant', 'surveillance', 'security', 'advocacy', 'protest', 'activism', 'activist'),\n",
+        "  'politics': ('politics', 'political', 'policy', 'policies', 'ideology', 'ideological', 'inequality', 'equality', 'equity', 'equitable', 'minister', 'administration', 'administrative', 'administrator', 'administrators', 'leader', 'leaders', 'leadership', 'president', 'presidency', 'management', 'state', 'country', 'national', 'nationalism', 'nationalization', 'international', 'transnational', 'globalization', 'globalized', 'government', 'governance', 'poverty', 'impoverished', 'disadvantaged', 'marginalized', 'marginalization', 'oppression', 'oppressed', 'war', 'wars', 'military', 'militaries', 'militant', 'surveillance', 'security', 'advocacy', 'protest', 'protests', 'protesting', 'activism', 'activist'),\n",
         "\n",
-        "  'history': ('history', 'historical', 'historic', 'ahistoric', 'century', 'archaeology', 'archaeological')\n",
+        "  'history': ('history', 'historical', 'historic', 'ahistoric', 'century', 'centuries', 'archaeology', 'archaeological', 'historiography')\n",
         " }\n"
       ]
     }
