--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlr1dwfigt2hZhsv3YP3Bw",
+      "authorship_tag": "ABX9TyM3Im92tfW4c8DSvxvtiiXp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -129,9 +129,9 @@
         "\n",
         "  'psychology': ('psychology', 'psychological', 'psychiatry', 'psychologist', 'psychiatrist', 'psychiatric', 'behavior', 'mental', 'mentally'),\n",
         "\n",
-        "  'media': ('media', 'film', 'movie', 'music', 'radio', 'television', 'TV', 'video', 'platform', 'communication', 'literature', 'newspaper', 'internet'),\n",
+        "  'media & art': ('media', 'art', 'arts', 'architecture', 'architectural', 'graphic design', 'designer', 'artist', 'artists', 'artistic', 'artisinal', 'artisan', 'artisans', 'sculpture', 'film', 'films', 'movie', 'movies', 'cinema', 'music', 'musical', 'theater', 'theatre', 'theatrical', 'radio', 'television', 'TV', 'video', 'videos', 'painting', 'paintings', 'painter', 'painters', 'platform', 'communication', 'literature', 'newspaper', 'internet'),\n",
         "\n",
-        "  'economics': ('economic', 'economics', 'economy', 'socioeconomic', 'finance', 'financial', 'money', 'trade', 'market', 'business', 'currency', 'corporate', 'corporation', 'debt'),\n",
+        "  'economics': ('economic', 'economics', 'economy', 'socioeconomic', 'finance', 'financial', 'money', 'trade', 'market', 'marketing', 'advertising', 'business', 'currency', 'corporate', 'corporation', 'debt'),\n",
         "\n",
         "  'gender & sexuality': ('gender', 'gendering', 'sexism', 'sexualization', 'sexuality', 'sex', 'heterosexuality', 'heterosexuality', 'misogyny', 'misogynistic', 'feminism', 'feminist', 'gendering', 'cisgender', 'masculine', 'male', 'man', 'boy', 'feminine', 'female', 'woman', 'girl', 'transgender', 'non-binary', 'nonbinary', 'queer', 'homosexual', 'homosexuality', 'gay', 'lesbian', 'bisexual', 'bisexuality', 'homophobia', 'homophobic', 'transphobia', 'transphobic'),\n",
         "\n",
