--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3Im92tfW4c8DSvxvtiiXp",
+      "authorship_tag": "ABX9TyP2JgkpNk9WvsJnzpE/4jAp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -125,7 +125,7 @@
         "\n",
         "\n",
         "{\n",
-        "  'race & ethnicity': ('race', 'racial', 'racialized', 'racism', 'racist', 'ethnicity', 'ethnic', 'xenophobia', 'xenophobic', 'colonialism', 'colonialist', 'colonial', 'colonization', 'colonized', 'decolonized', 'decolonization', 'decolonial', 'subaltern'),\n",
+        "  'race & ethnicity': ('race', 'racial', 'racialized', 'racism', 'racist', 'ethnicity', 'ethnic', 'xenophobia', 'xenophobic', 'segregational', 'segregation', 'colonialism', 'colonialist', 'colonial', 'colonization', 'colonized', 'decolonized', 'decolonization', 'decolonial', 'subaltern'),\n",
         "\n",
         "  'psychology': ('psychology', 'psychological', 'psychiatry', 'psychologist', 'psychiatrist', 'psychiatric', 'behavior', 'mental', 'mentally'),\n",
         "\n",
@@ -135,7 +135,7 @@
         "\n",
         "  'gender & sexuality': ('gender', 'gendering', 'sexism', 'sexualization', 'sexuality', 'sex', 'heterosexuality', 'heterosexuality', 'misogyny', 'misogynistic', 'feminism', 'feminist', 'gendering', 'cisgender', 'masculine', 'male', 'man', 'boy', 'feminine', 'female', 'woman', 'girl', 'transgender', 'non-binary', 'nonbinary', 'queer', 'homosexual', 'homosexuality', 'gay', 'lesbian', 'bisexual', 'bisexuality', 'homophobia', 'homophobic', 'transphobia', 'transphobic'),\n",
         "\n",
-        "  'politics': ('politics', 'political', 'policy', 'policies', 'ideology', 'ideological', 'inequality', 'equality', 'equity', 'equitable', 'minister', 'administration', 'administrative', 'administrator', 'administrators', 'leader', 'leaders', 'leadership', 'president', 'presidency', 'management', 'state', 'country', 'national', 'nationalism', 'nationalization', 'international', 'transnational', 'globalization', 'globalized', 'government', 'governance', 'poverty', 'impoverished', 'disadvantaged', 'marginalized', 'marginalization', 'oppression', 'oppressed', 'war', 'wars', 'military', 'militaries', 'militant', 'surveillance', 'security', 'advocacy', 'protest', 'protests', 'protesting', 'activism', 'activist'),\n",
+        "  'politics': ('politics', 'political', 'policy', 'policies', 'ideology', 'ideological', 'inequality', 'equality', 'equity', 'equitable', 'minister', 'administration', 'administrative', 'administrator', 'administrators', 'leader', 'leaders', 'leadership', 'president', 'presidency', 'management', 'state', 'country', 'national', 'nationalism', 'nationalization', 'international', 'transnational', 'globalization', 'globalized', 'government', 'governance', 'poverty', 'impoverished', 'disadvantaged', 'marginalized', 'marginalization', 'oppression', 'oppressed', 'war', 'wars', 'military', 'militaries', 'militant', 'surveillance', 'security', 'advocacy', 'protest', 'protests', 'protesting', 'activism', 'activist', 'climate', 'environment', 'environmental', 'warming', 'disaster'),\n",
         "\n",
         "  'history': ('history', 'historical', 'historic', 'ahistoric', 'century', 'centuries', 'archaeology', 'archaeological', 'historiography')\n",
         " }\n"
