--- a/labs/lab07_cellular_automata.ipynb
+++ b/labs/lab07_cellular_automata.ipynb
@@ -47,7 +47,7 @@
       "outputs": [],
       "source": [
         "%matplotlib inline\n",
-        "\n",
+        "from dataclasses import dataclass\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np"
       ],
@@ -250,10 +250,10 @@
           "start_time": "2024-01-03T01:08:15.797136Z"
         },
         "id": "zKeKA9eCYEa_",
-        "outputId": "52a9ff57-3001-4b1a-a501-2c4be752e5fe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "52a9ff57-3001-4b1a-a501-2c4be752e5fe"
       }
     },
     {
@@ -286,7 +286,24 @@
       "execution_count": 5,
       "outputs": [],
       "source": [
-        "# Solution for Ex. 2 here..."
+        "@dataclass\n",
+        "class cell_1D:\n",
+        "  rule: int\n",
+        "  start_state: np.ndarray\n",
+        "\n",
+        "  def __init__(self):\n",
+        "\n",
+        "\n",
+        "  @classmethod\n",
+        "  def simulate(cls, self.rule, steps):\n",
+        "\n",
+        "    simulate_ca()\n",
+        "\n",
+        "  @classmethod\n",
+        "  def step(cls):\n",
+        "\n",
+        "  @classmethod\n",
+        "  def draw(cls):"
       ],
       "metadata": {
         "pycharm": {
